# Pdf.Microservice

./: .env.dev  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: conf.py  index.md
fastpdf/: PDFGenerator.py  __init__.py  generator.py  utils.py
fastpdf/api/: api.py
fastpdf/tests/: test_generator.py
src/: PDFGenerator.py  __init__.py  core.py  generator.py  main.py  maps.py  utils.py
src/api/: pdf_api.py
src/tests/: test_api.py  test_generator.py  test_maps.py
templates/: header.html  index.html  styles.css
templates/ferrovial/: diccionario.json  example.json  header.html  index.html  styles.css
